--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,7 +3,9 @@ confirmed_email_user:
   uid:                 "<%= @email %>"
   email:               "<%= @email %>"
   provider:            'email'
-  confirmed_at:        '<% 2.weeks.ago %>'
+  confirmed_at:        '<%= 2.weeks.ago %>'
+  created_at:          '<%= 2.weeks.ago %>'
+  updated_at:          '<%= 2.weeks.ago %>'
   confirm_success_url: '<%= Faker::Internet.url %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
 
@@ -12,7 +14,9 @@ duplicate_email_facebook_user:
   uid:                 "<%= Faker::Number.number(10) %>"
   email:               "<%= @fb_email %>"
   provider:            'facebook'
-  confirmed_at:        '<% 2.weeks.ago %>'
+  created_at:          '<%= 2.weeks.ago %>'
+  updated_at:          '<%= 2.weeks.ago %>'
+  confirmed_at:        '<%= 2.weeks.ago %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
 
 <% @unconfirmed_email = Faker::Internet.email %>
@@ -21,4 +25,6 @@ unconfirmed_email_user:
   email:               "<%= @unconfirmed_email %>"
   provider:            'email'
   confirm_success_url: '<%= Faker::Internet.url %>'
+  created_at:          '<%= 2.weeks.ago %>'
+  updated_at:          '<%= 2.weeks.ago %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
