--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,12 @@
+<% timestamp = DateTime.parse(2.weeks.ago.to_s).to_time.strftime("%F %T") %>
 <% @email = Faker::Internet.email %>
 confirmed_email_user:
   uid:                 "<%= @email %>"
   email:               "<%= @email %>"
   provider:            'email'
-  confirmed_at:        '<%= 2.weeks.ago %>'
-  created_at:          '<%= 2.weeks.ago %>'
-  updated_at:          '<%= 2.weeks.ago %>'
+  confirmed_at:        '<%= timestamp %>'
+  created_at:          '<%= timestamp %>'
+  updated_at:          '<%= timestamp %>'
   confirm_success_url: '<%= Faker::Internet.url %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
 
@@ -14,9 +15,9 @@ duplicate_email_facebook_user:
   uid:                 "<%= Faker::Number.number(10) %>"
   email:               "<%= @fb_email %>"
   provider:            'facebook'
-  created_at:          '<%= 2.weeks.ago %>'
-  updated_at:          '<%= 2.weeks.ago %>'
-  confirmed_at:        '<%= 2.weeks.ago %>'
+  created_at:          '<%= timestamp %>'
+  updated_at:          '<%= timestamp %>'
+  confirmed_at:        '<%= timestamp %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
 
 <% @unconfirmed_email = Faker::Internet.email %>
@@ -25,6 +26,6 @@ unconfirmed_email_user:
   email:               "<%= @unconfirmed_email %>"
   provider:            'email'
   confirm_success_url: '<%= Faker::Internet.url %>'
-  created_at:          '<%= 2.weeks.ago %>'
-  updated_at:          '<%= 2.weeks.ago %>'
+  created_at:          '<%= timestamp %>'
+  updated_at:          '<%= timestamp %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
