--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ test/dummy/db/*.sqlite3-journal
 test/dummy/log/*.log
 test/dummy/tmp/
 test/dummy/.sass-cache
+test/dummy/config/application.yml
 coverage
