--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,6 @@
 <% timestamp = DateTime.parse(2.weeks.ago.to_s).to_time.strftime("%F %T") %>
 <% @email = Faker::Internet.email %>
+<% @username = Faker::Internet.user_name %>
 confirmed_email_user:
   uid:                 "<%= @email %>"
   email:               "<%= @email %>"
@@ -8,6 +9,18 @@ confirmed_email_user:
   created_at:          '<%= timestamp %>'
   updated_at:          '<%= timestamp %>'
   encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
+
+<% @email = Faker::Internet.email %>
+<% @username = Faker::Internet.user_name %>
+confirmed_email_user_with_username:
+  uid:                 "<%= @email %>"
+  email:               "<%= @email %>"
+  provider:            'email'
+  confirmed_at:        '<%= timestamp %>'
+  created_at:          '<%= timestamp %>'
+  updated_at:          '<%= timestamp %>'
+  encrypted_password:  <%= User.new.send(:password_digest, 'secret123') %>
+  username:            "<%= @username %>"
 
 <% @fb_email = Faker::Internet.email %>
 duplicate_email_facebook_user:
