--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -28,3 +28,15 @@ unconfirmed_email_user:
   created_at:         '<%= timestamp %>'
   updated_at:         '<%= timestamp %>'
   encrypted_password: <%= User.new.send(:password_digest, 'secret123') %>
+  confirmation_sent_at: '<%= timestamp %>'
+
+<% @recent_unconfirmed_email = Faker::Internet.email %>
+<% recent_timestamp = DateTime.parse(1.day.ago.to_s).to_time.strftime("%F %T") %>
+recent_unconfirmed_email_user:
+  uid:                "<%= @recent_unconfirmed_email %>"
+  email:              "<%= @recent_unconfirmed_email %>"
+  provider:           'email'
+  created_at:         '<%= timestamp %>'
+  updated_at:         '<%= timestamp %>'
+  encrypted_password: <%= User.new.send(:password_digest, 'secret123') %>
+  confirmation_sent_at: '<%= recent_timestamp %>'
