--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -46,10 +46,10 @@ Layout/EmptyLineBetweenDefs:
 # Cop supports --auto-correct.
 Layout/EmptyLines:
   Exclude:
-    - 'test/dummy/app/controllers/custom/passwords_controller.rb'
-    - 'test/dummy/app/helpers/application_helper.rb'
-    - 'test/dummy/config/routes.rb'
-    - 'test/lib/generators/devise_token_auth/install_generator_test.rb'
+    # - 'test/dummy/app/controllers/custom/passwords_controller.rb'
+    # - 'test/dummy/app/helpers/application_helper.rb'
+    # - 'test/dummy/config/routes.rb'
+    # - 'test/lib/generators/devise_token_auth/install_generator_test.rb'
 
 # Offense count: 1
 # Cop supports --auto-correct.
