Move `Style/ClassAndModuleChildren` from todos to main config.
 - This Cop forces either nested or compact module declarations.
   While nested may be considered best practice, changing these up may
   lead to all kinds of merge conflicts on open PRs.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,3 +19,13 @@ AllCops:
 # https://rubocop.readthedocs.io/en/latest/cops_style/#stylefrozenstringliteralcomment
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+# Offense count: 34
+# Cop supports --auto-correct.
+# Configuration parameters: AutoCorrect, EnforcedStyle.
+# SupportedStyles: nested, compact
+#
+# Description from Rubocop Manual:
+# https://rubocop.readthedocs.io/en/latest/cops_style/#styleclassandmodulechildren
+Style/ClassAndModuleChildren:
+  Enabled: false
