--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,3 +42,17 @@ Style/ClassAndModuleChildren:
 Style/HashSyntax:
   Enabled: true
   EnforcedStyle: ruby19
+
+# Cop supports --auto-correct.
+# Configuration parameters: EnforcedStyle, MinSize.
+# SupportedStyles: percent, brackets
+#
+# Description from Rubocop Manual:
+#   Check for array literals made up of symbols that are not using
+#   the `%i()` syntax.
+#
+# https://rubocop.readthedocs.io/en/latest/cops_style/#stylesymbolarray
+Style/SymbolArray:
+  Enabled: true
+  EnforcedStyle: percent
+  MinSize: 3
