Update rubocop todo list and exclusions.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,8 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   Exclude:
     - 'coverage/**/*'
+    - 'test/dummy/tmp/**/*'
+    - 'test/dummy/log/**/*'
 
 # Offense count: 130
 # Cop supports --auto-correct.
