Partially fix Metrics/LineLength.
 - Custom configuration for cop:
   * Set max to 80 columns
   * Exclude all test files
   * Exclude `Guardfile` & `gemspec`
   * Ignore comments

 - Exclude remaining files with violations via `.rubocop_todo.yml`.
   NOTE: Some files need refactoring, others can be resolved by
         extending max LineLength from 80 to 100 columns.

 - Resolve some violations where obvious.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,3 +58,17 @@ Style/SymbolArray:
   Enabled: true
   EnforcedStyle: percent
   MinSize: 3
+
+# Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
+# URISchemes: http, https
+Metrics/LineLength:
+  inherit_mode:
+    merge:
+      - Exclude
+  Exclude:
+    - 'test/**/*'
+    - 'Guardfile'
+    - 'devise_token_auth.gemspec'
+  IgnoredPatterns:
+    - '(\A|\s)#'
+  Max: 80
