Partially (mostly) fix Metrics/BlockLength.
 - Custom configuration for cop:
   * Set max to 25 lines (default)
   * Exclude Rails Engine file
   * Exclude custom DSL files from test-dummy Rails app
   * Exclude `describe` blocks in tests
   * Exclude routing blocks

 - Exclude `app/models/devise_token_auth/concerns/user.rb` in
   `.rubocop_todo.yml`. NOTE: This file could use a bunch of refactoring.

 - Resolve violation in `test/controllers/overrides/passwords_controller_test.rb`
   by removing unused or single-use instance variables

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,6 +59,24 @@ Style/SymbolArray:
   EnforcedStyle: percent
   MinSize: 3
 
+# Configuration parameters: CountComments, ExcludedMethods.
+Metrics/BlockLength:
+  inherit_mode:
+    merge:
+      - Exclude
+      - ExcludedMethod
+  Exclude:
+    - 'lib/devise_token_auth/engine.rb'
+    - 'test/dummy/config/**/*'
+    - 'test/dummy/db/**/*'
+  ExcludedMethods:
+    - describe
+    - draw
+    - namespace
+    - devise_scope
+    - unnest_namespace
+  Max: 25
+
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
 Metrics/LineLength:
