--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,23 @@ AllCops:
     - 'test/dummy/tmp/**/*'
     - 'test/dummy/log/**/*'
 
+# Cop supports --auto-correct.
+# Configuration parameters: EnforcedStyle, ProceduralMethods, FunctionalMethods, IgnoredMethods.
+# SupportedStyles: line_count_based, semantic, braces_for_chaining
+# ProceduralMethods: benchmark, bm, bmbm, create, each_with_object, measure, new, realtime, tap, with_object
+# FunctionalMethods: let, let!, subject, watch
+# IgnoredMethods: lambda, proc, it
+Style/BlockDelimiters:
+  IgnoredMethods:
+    - assert_output
+    - assert_raises
+    - assert_silent
+    - assert_throws
+    - refute_output
+    - refute_raises
+    - refute_silent
+    - refute_throws
+
 # Offense count: 130
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle.
