--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -9,6 +9,16 @@
 # Offense count: 3
 # Cop supports --auto-correct.
 # Configuration parameters: Include, TreatCommentsAsGroupSeparators.
+# Include: **/*.gemfile, **/Gemfile, **/gems.rb
+Bundler/OrderedGems:
+  Exclude:
+    - 'gemfiles/rails_4_2.gemfile'
+    - 'gemfiles/rails_5_0.gemfile'
+    - 'gemfiles/rails_5_1.gemfile'
+
+# Offense count: 3
+# Cop supports --auto-correct.
+# Configuration parameters: Include, TreatCommentsAsGroupSeparators.
 # Include: **/*.gemspec
 Gemspec/OrderedDependencies:
   Exclude:
