Test against Rails 5.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ gemfile:
   - gemfiles/rails_4_2.gemfile
   - gemfiles/rails_5_0.gemfile
   - gemfiles/rails_5_1.gemfile
+  - gemfiles/rails_5_2.gemfile
 
 env:
   global:
