[TEST]: ruby 2.4.2 + postgresql only

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   - bundle exec rake
 
 before_script:
-  - mysql -e 'create database devise_token_auth_test'
+  #- mysql -e 'create database devise_token_auth_test'
   - psql -c 'create database devise_token_auth_test' -U postgres
 
 addons:
