--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ cache: bundler
 sudo: false
 
 rvm:
-  #- 2.2.8
-  #- 2.3.1
+  - 2.2.8
+  - 2.3.1
   - 2.4.2
 
 env:
   global:
     - RAILS_ENV=test
   matrix:
-    #- DB=sqlite
-    #- DB=mysql
+    - DB=sqlite
+    - DB=mysql
     - DB=postgresql
 
 script:
@@ -20,13 +20,13 @@ script:
   - bundle exec rake
 
 before_script:
-  #- mysql -e 'create database devise_token_auth_test'
+  - mysql -e 'create database devise_token_auth_test'
   - psql -c 'create database devise_token_auth_test' -U postgres
 
 addons:
   postgresql: "9.4"
-  #code_climate:
-  #  - repo_token: 44d7688de8e1b567b4af25ec5083c2cc0a355ab911192a7cbefd1ea25b2ffd3d
+  code_climate:
+    - repo_token: 44d7688de8e1b567b4af25ec5083c2cc0a355ab911192a7cbefd1ea25b2ffd3d
 
-#after_success:
-#  - bundle exec codeclimate-test-reporter
+after_success:
+  - bundle exec codeclimate-test-reporter
