--- a/.travis.yml
+++ b/.travis.yml
@@ -5,26 +5,36 @@ sudo: false
 before_install: gem install bundler
 
 rvm:
+  - 2.2.10
+  - 2.3.7
+  - 2.4.4
   - 2.5.1
 
 gemfile:
+  - gemfiles/rails_4_2.gemfile
+  - gemfiles/rails_5_0.gemfile
   - gemfiles/rails_5_1.gemfile
 
 env:
   global:
     - RAILS_ENV=test
   matrix:
-    #- DB=sqlite
-    #- DB=mysql
+    - DB=sqlite
+    - DB=mysql
     - DB=postgresql
 
 script:
   - bundle exec rake --trace db:migrate
-  - bundle exec rake --trace
+  - bundle exec rake
 
 before_script:
-  #- mysql -e 'create database devise_token_auth_test'
+  - mysql -e 'create database devise_token_auth_test'
   - psql -c 'create database devise_token_auth_test' -U postgres
 
 addons:
   postgresql: "9.4"
+  code_climate:
+    - repo_token: 44d7688de8e1b567b4af25ec5083c2cc0a355ab911192a7cbefd1ea25b2ffd3d
+
+after_success:
+  - bundle exec codeclimate-test-reporter
