Fix Metrics/LineLength rubocop warnings.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -109,6 +109,7 @@ Metrics/LineLength:
     - 'test/**/*'
     - 'Guardfile'
     - 'devise_token_auth.gemspec'
+    - 'lib/generators/devise_token_auth/install_generator_helpers.rb'
   IgnoredPatterns:
     - '(\A|\s)#'
   Max: 80
