--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,12 @@ AllCops:
     - 'lib/generators/devise_token_auth/install_generator_helpers.rb'
 
 # Cop supports --auto-correct.
+# Configuration parameters: Include.
+# Disabled due to false-positive for case statement in Gemfile.
+Bundler/DuplicatedGem:
+  Enabled: false
+
+# Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, IndentationWidth.
 # SupportedStyles: aligned, indented, indented_relative_to_receiver
 #
@@ -47,6 +53,15 @@ Style/BlockDelimiters:
 Style/ClassAndModuleChildren:
   Enabled: false
 
+
+# Cop supports --auto-correct.
+#
+# TODO, discuss if it's needed
+# Description from Rubocop Manual:
+# https://rubocop.readthedocs.io/en/latest/cops_style/#styledocumentation
+Style/Documentation:
+  Enabled: false
+
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, UseHashRocketsWithSymbolValues,
 #   PreferHashRocketsForNonAlnumEndingSymbols.
@@ -84,6 +99,12 @@ Style/SymbolArray:
   Enabled: true
   EnforcedStyle: percent
   MinSize: 3
+
+# Cop supports --auto-correct.
+# Configuration parameters: IgnoredMethods.
+# https://rubocop.readthedocs.io/en/latest/cops_style/#stylesymbolproc
+Style/SymbolProc:
+  IgnoredMethods: [ 'after' ]
 
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, MinSize, WordRegex.
