Exclude travis test for Ruby 2.7.0 with Rails 4.2
Ruby 2.7 comes with Bundler 2 which is not compatible with Rails 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,8 @@ matrix:
   exclude:
     - rvm: 2.6.4
       gemfile: gemfiles/rails_4_2.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.3.8
       gemfile: gemfiles/rails_6_0.gemfile
     - rvm: 2.4.7
