--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,14 @@ rvm:
   - 2.4.7
   - 2.5.6
   - 2.6.4
+  - 2.7.0
 
 gemfile:
   - gemfiles/rails_4_2.gemfile
   - gemfiles/rails_5_0.gemfile
   - gemfiles/rails_5_1.gemfile
   - gemfiles/rails_5_2.gemfile
+  - gemfiles/rails_6_0.gemfile
 
 env:
   global:
@@ -28,51 +30,60 @@ env:
 
 matrix:
   include:
-  - rvm: 2.3.8
-    gemfile: gemfiles/rails_4_2_mongoid_5.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - rvm: 2.3.8
-    gemfile: gemfiles/rails_5_1_mongoid_6.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - rvm: 2.4.7
-    gemfile: gemfiles/rails_5_1_mongoid_7.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - rvm: 2.5.6
-    gemfile: gemfiles/rails_5_2_mongoid_6.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - rvm: 2.5.6
-    gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - rvm: 2.6.4
-    gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
-    env: DEVISE_TOKEN_AUTH_ORM=mongoid
-  - name: Code Climate Test Coverage
-    rmv: 2.5.6
-    env:
-      - CC_TEST_REPORTER_ID=44d7688de8e1b567b4af25ec5083c2cc0a355ab911192a7cbefd1ea25b2ffd3d
-      - GEMFILE_AR=gemfiles/rails_5_1.gemfile
-      - GEMFILE_MONGOID=gemfiles/rails_5_1_mongoid_7.gemfile
-    script:
-      - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      - chmod +x ./cc-test-reporter
-      - ./cc-test-reporter before-build
-      # with ActiveRecord
-      - bundle install --jobs=3 --retry=3 --gemfile $GEMFILE_AR
-      - BUNDLE_GEMFILE=$GEMFILE_AR bundle exec rake --trace db:migrate
-      - BUNDLE_GEMFILE=$GEMFILE_AR bundle exec rake
-      - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.active_record.json coverage/.resultset.json
-      # with Mongoid
-      - bundle install --jobs=3 --retry=3 --gemfile $GEMFILE_MONGOID
-      - BUNDLE_GEMFILE=$GEMFILE_MONGOID DEVISE_TOKEN_AUTH_ORM=mongoid bundle exec rake
-      - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.mongoid.json coverage/.resultset.json
-      # merge test results
-      - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then
+    - rvm: 2.3.8
+      gemfile: gemfiles/rails_4_2_mongoid_5.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.3.8
+      gemfile: gemfiles/rails_5_1_mongoid_6.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.4.7
+      gemfile: gemfiles/rails_5_1_mongoid_7.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.5.6
+      gemfile: gemfiles/rails_5_2_mongoid_6.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.5.6
+      gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.6.4
+      gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+    - name: Code Climate Test Coverage
+      rvm: 2.5.6
+      env:
+        - CC_TEST_REPORTER_ID=44d7688de8e1b567b4af25ec5083c2cc0a355ab911192a7cbefd1ea25b2ffd3d
+        - GEMFILE_AR=gemfiles/rails_5_1.gemfile
+        - GEMFILE_MONGOID=gemfiles/rails_5_1_mongoid_7.gemfile
+      script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+        # with ActiveRecord
+        - bundle install --jobs=3 --retry=3 --gemfile $GEMFILE_AR
+        - BUNDLE_GEMFILE=$GEMFILE_AR bundle exec rake --trace db:migrate
+        - BUNDLE_GEMFILE=$GEMFILE_AR bundle exec rake
+        - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.active_record.json coverage/.resultset.json
+        # with Mongoid
+        - bundle install --jobs=3 --retry=3 --gemfile $GEMFILE_MONGOID
+        - BUNDLE_GEMFILE=$GEMFILE_MONGOID DEVISE_TOKEN_AUTH_ORM=mongoid bundle exec rake
+        - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.mongoid.json coverage/.resultset.json
+        # merge test results
+        - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then
           ./cc-test-reporter sum-coverage coverage/codeclimate.active_record.json coverage/codeclimate.mongoid.json;
           ./cc-test-reporter upload-coverage;
-        fi
+          fi
   exclude:
     - rvm: 2.6.4
       gemfile: gemfiles/rails_4_2.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails_4_2.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/rails_6_0.gemfile
+    - rvm: 2.4.7
+      gemfile: gemfiles/rails_6_0.gemfile
   fast_finish: true
 
 before_install:
