--- a/.travis.yml
+++ b/.travis.yml
@@ -32,25 +32,25 @@ matrix:
   include:
     - rvm: 2.3.8
       gemfile: gemfiles/rails_4_2_mongoid_5.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.3.8
       gemfile: gemfiles/rails_5_1_mongoid_6.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.4.7
       gemfile: gemfiles/rails_5_1_mongoid_7.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.5.6
       gemfile: gemfiles/rails_5_2_mongoid_6.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.5.6
       gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.6.4
       gemfile: gemfiles/rails_5_2_mongoid_7.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - rvm: 2.7.0
       gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
-      env: DEVISE_TOKEN_AUTH_ORM=mongoid
+      env: DEVISE_TOKEN_AUTH_ORM=mongoid DB=mongodb
     - name: Code Climate Test Coverage
       rvm: 2.5.6
       env:
