Add Rails 7 to Github Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,12 +42,11 @@ jobs:
           - ruby: 2.7
             gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
-          # Waiting for mongoid to support Rails 7.0
-          # - ruby: '3.0'
-          #   gemfile: gemfiles/rails_7_0.gemfile
-          # - ruby: '3.0'
-          #   gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
-          #   devise-token-auth-orm: mongoid
+          - ruby: 3.0
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.0
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
         exclude:
           - ruby: 2.6
             gemfile: gemfiles/rails_4_2.gemfile
