Add ruby 3.0 to github actions matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,14 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
+          - 3.0
         gemfile:
           - gemfiles/rails_4_2.gemfile
           - gemfiles/rails_5_0.gemfile
           - gemfiles/rails_5_1.gemfile
           - gemfiles/rails_5_2.gemfile
           - gemfiles/rails_6_0.gemfile
+          - gemfiles/rails_7_0.gemfile
         db:
           - sqlite
           - mysql
@@ -43,8 +45,6 @@ jobs:
             gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
           - ruby: 3.0
-            gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 3.0
             gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
         exclude:
@@ -52,8 +52,16 @@ jobs:
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.0
+            gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 2.4
             gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 2.4
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.5
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.6
+            gemfile: gemfiles/rails_7_0.gemfile
 
     services:
       mysql:
