--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
+          - 3.1
         gemfile:
           - gemfiles/rails_4_2.gemfile
           - gemfiles/rails_5_0.gemfile
@@ -54,6 +55,16 @@ jobs:
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 2.4
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.1
             gemfile: gemfiles/rails_6_0.gemfile
 
     services:
