Including gemfile for rails 7.1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
           - gemfiles/rails_5_2.gemfile
           - gemfiles/rails_6_0.gemfile
           - gemfiles/rails_7_0.gemfile
+          - gemfiles/rails_7_1.gemfile
         db:
           - sqlite
           - mysql
@@ -50,10 +51,16 @@ jobs:
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 3.0
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.0
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 3.1
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 3.2
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_7_1.gemfile
           # Waiting for mongoid to support Rails 7.0
           # - ruby: '3.0'
           #   gemfile: gemfiles/rails_7_0.gemfile
@@ -65,12 +72,18 @@ jobs:
             gemfile: gemfiles/rails_6_0.gemfile
           - ruby: 2.4
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.4
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.5
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.5
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.6
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 2.6
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.6
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 3.1
@@ -82,6 +95,16 @@ jobs:
           - ruby: 3.1
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby: 3.1
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.2
             gemfile: gemfiles/rails_6_0.gemfile
 
     services:
