--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ gemfile:
   - gemfiles/rails_5_2.gemfile
   - gemfiles/rails_6_0.gemfile
   - gemfiles/rails_7_0.gemfile
+  - gemfiles/rails_7_1.gemfile
 
 env:
   global:
