--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
-          - 3.0
+          - '3.0'
           - 3.1
           - 3.2
         gemfile:
@@ -24,7 +24,6 @@ jobs:
           - gemfiles/rails_5_2.gemfile
           - gemfiles/rails_6_0.gemfile
           - gemfiles/rails_7_0.gemfile
-          - gemfiles/rails_7_1.gemfile
         db:
           - sqlite
           - mysql
@@ -49,18 +48,12 @@ jobs:
             devise-token-auth-orm: mongoid
           - ruby: 2.7
             gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 3.0
-            gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 3.0
-            gemfile: gemfiles/rails_7_1.gemfile
-          - ruby: 3.1
+          - ruby: '3.0'
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 3.1
-            gemfile: gemfiles/rails_7_1.gemfile
-          - ruby: 3.2
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 3.2
-            gemfile: gemfiles/rails_7_1.gemfile
+            gemfile: gemfiles/rails_7_0.gemfile
           # Waiting for mongoid to support Rails 7.0
           # - ruby: '3.0'
           #   gemfile: gemfiles/rails_7_0.gemfile
@@ -72,18 +65,12 @@ jobs:
             gemfile: gemfiles/rails_6_0.gemfile
           - ruby: 2.4
             gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 2.4
-            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.5
             gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 2.5
-            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.6
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 2.6
             gemfile: gemfiles/rails_7_0.gemfile
-          - ruby: 2.6
-            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 3.1
