--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,6 +73,22 @@ jobs:
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_6_0.gemfile
           - ruby: 3.1
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 3.1
