--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,19 +47,25 @@ jobs:
             gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
           - ruby: 2.7
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
+          - ruby: 2.7
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: '3.0'
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
           - ruby: 3.1
             gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
           - ruby: 3.2
             gemfile: gemfiles/rails_7_0.gemfile
-          # Waiting for mongoid to support Rails 7.0
-          # - ruby: '3.0'
-          #   gemfile: gemfiles/rails_7_0.gemfile
-          # - ruby: '3.0'
-          #   gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
-          #   devise-token-auth-orm: mongoid
+          - ruby: 3.2
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
         exclude:
           - ruby: 2.4
             gemfile: gemfiles/rails_6_0.gemfile
