--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,16 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
+          - '3.0'
           - 3.1
+          - 3.2
         gemfile:
           - gemfiles/rails_4_2.gemfile
           - gemfiles/rails_5_0.gemfile
           - gemfiles/rails_5_1.gemfile
           - gemfiles/rails_5_2.gemfile
           - gemfiles/rails_6_0.gemfile
+          - gemfiles/rails_7_0.gemfile
         db:
           - sqlite
           - mysql
@@ -43,6 +46,14 @@ jobs:
           - ruby: 2.7
             gemfile: gemfiles/rails_6_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
+          - ruby: 2.7
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.1
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_7_0.gemfile
           # Waiting for mongoid to support Rails 7.0
           # - ruby: '3.0'
           #   gemfile: gemfiles/rails_7_0.gemfile
@@ -50,11 +61,33 @@ jobs:
           #   gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
           #   devise-token-auth-orm: mongoid
         exclude:
+          - ruby: 2.4
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 2.4
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 2.5
+            gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 2.6
             gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 2.6
+            gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
-          - ruby: 2.4
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: '3.0'
             gemfile: gemfiles/rails_6_0.gemfile
           - ruby: 3.1
             gemfile: gemfiles/rails_4_2.gemfile
@@ -65,6 +98,16 @@ jobs:
           - ruby: 3.1
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby: 3.1
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.2
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.2
             gemfile: gemfiles/rails_6_0.gemfile
 
     services:
@@ -88,7 +131,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup Bundler 1.x for Rails 4.x
         if: ${{ matrix.gemfile == 'gemfiles/rails_4_2.gemfile' || matrix.gemfile == 'gemfiles/rails_4_2_mongoid_5.gemfile' }}
         run: echo "BUNDLER_VERSION=1.17.3" >> $GITHUB_ENV
