--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
           - '3.0'
           - 3.1
           - 3.2
+          - 3.3
         gemfile:
           - gemfiles/rails_4_2.gemfile
           - gemfiles/rails_5_0.gemfile
@@ -21,6 +22,9 @@ jobs:
           - gemfiles/rails_5_2.gemfile
           - gemfiles/rails_6_0.gemfile
           - gemfiles/rails_7_0.gemfile
+          - gemfiles/rails_7_1.gemfile
+          - gemfiles/rails_7_2.gemfile
+          - gemfiles/rails_8_0.gemfile
         db:
           - sqlite
           - mysql
@@ -51,6 +55,7 @@ jobs:
           - ruby: 3.2
             gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
+          # TODO: add mongoid for rails 7.2
         exclude:
           - ruby: 2.7
             gemfile: gemfiles/rails_4_2.gemfile
@@ -60,6 +65,10 @@ jobs:
             gemfile: gemfiles/rails_5_1.gemfile
           - ruby: 2.7
             gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_7_2.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/rails_8_0.gemfile
           - ruby: '3.0'
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: '3.0'
@@ -70,6 +79,12 @@ jobs:
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby: '3.0'
             gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_7_2.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_8_0.gemfile
+          - ruby: '3.0'
+            gemfile: gemfiles/rails_7_1.gemfile
           - ruby: 3.1
             gemfile: gemfiles/rails_4_2.gemfile
           - ruby: 3.1
@@ -90,6 +105,17 @@ jobs:
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby: 3.2
             gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_6_0.gemfile
+
 
     services:
       mysql:
