--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
           - '3.0'
           - 3.1
           - 3.2
+          - 3.3
+          - 3.4
         gemfile:
           - gemfiles/rails_4_2.gemfile
           - gemfiles/rails_5_0.gemfile
@@ -49,6 +51,16 @@ jobs:
           - ruby: 3.2
             gemfile: gemfiles/rails_7_0.gemfile
           - ruby: 3.2
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
+          - ruby: 3.3
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
+            devise-token-auth-orm: mongoid
+          - ruby: 3.4
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby: 3.4
             gemfile: gemfiles/rails_7_0_mongoid_7.gemfile
             devise-token-auth-orm: mongoid
         exclude:
@@ -89,6 +101,26 @@ jobs:
           - ruby: 3.2
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby: 3.2
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.3
+            gemfile: gemfiles/rails_6_0.gemfile
+          - ruby: 3.4
+            gemfile: gemfiles/rails_4_2.gemfile
+          - ruby: 3.4
+            gemfile: gemfiles/rails_5_0.gemfile
+          - ruby: 3.4
+            gemfile: gemfiles/rails_5_1.gemfile
+          - ruby: 3.4
+            gemfile: gemfiles/rails_5_2.gemfile
+          - ruby: 3.4
             gemfile: gemfiles/rails_6_0.gemfile
 
     services:
